feat: Responsive design fixes, SEO improvements, profile photo, and config updates

--- a/index.html
+++ b/index.html
@@ -14,7 +14,22 @@
       }
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Samir's Portfolio</title>
+    <title>Samir Pandey | Full Stack Developer</title>
+    <meta name="description" content="Samir Pandey - Full Stack Developer passionate about building scalable, user-friendly web applications with React, Next.js, and Node.js." />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://mycampusflow.netlify.app/" />
+    <meta property="og:title" content="Samir Pandey | Full Stack Developer" />
+    <meta property="og:description" content="Portfolio of Samir Pandey - Full Stack Developer specializing in React, Next.js, and Node.js." />
+    <meta property="og:image" content="/samirpic.webp" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://mycampusflow.netlify.app/" />
+    <meta property="twitter:title" content="Samir Pandey | Full Stack Developer" />
+    <meta property="twitter:description" content="Portfolio of Samir Pandey - Full Stack Developer specializing in React, Next.js, and Node.js." />
+    <meta property="twitter:image" content="/samirpic.webp" />
   </head>
   <body>
     <!-- Example rounded avatar image -->
