chore: add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -1,40 +1,67 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/webp" href="/samirpic.webp" />
-    <style>
-      /* Favicons can't be styled with CSS. To show a rounded image on the page, use an <img id="avatar"> and this CSS: */
-      #avatar {
-        width: 48px;
-        height: 48px;
-        border-radius: 50%;
-        object-fit: cover;
-        display: inline-block;
-      }
-    </style>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Samir Pandey | Full Stack Developer</title>
-    <meta name="description" content="Samir Pandey - Full Stack Developer passionate about building scalable, user-friendly web applications with React, Next.js, and Node.js." />
-    
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://mycampusflow.netlify.app/" />
-    <meta property="og:title" content="Samir Pandey | Full Stack Developer" />
-    <meta property="og:description" content="Portfolio of Samir Pandey - Full Stack Developer specializing in React, Next.js, and Node.js." />
-    <meta property="og:image" content="/samirpic.webp" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://mycampusflow.netlify.app/" />
-    <meta property="twitter:title" content="Samir Pandey | Full Stack Developer" />
-    <meta property="twitter:description" content="Portfolio of Samir Pandey - Full Stack Developer specializing in React, Next.js, and Node.js." />
-    <meta property="twitter:image" content="/samirpic.webp" />
-  </head>
-  <body>
-    <!-- Example rounded avatar image -->
-    
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="google-site-verification" content="eAGcOQ8ezTbT6rQ0IijvNEJnbeY5bhKkeMeNeH-RUf8" />
+  <link rel="icon" type="image/webp" href="/samirpic.webp" />
+  <style>
+    /* Favicons can't be styled with CSS. To show a rounded image on the page, use an <img id="avatar"> and this CSS: */
+    #avatar {
+      width: 48px;
+      height: 48px;
+      border-radius: 50%;
+      object-fit: cover;
+      display: inline-block;
+    }
+  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Samir Pandey | Full Stack Web Developer | samirpandey.in</title>
+  <meta name="description"
+    content="Samir Pandey is a Full Stack Developer specializing in React, Next.js, Node.js, and scalable web applications. Explore the portfolio of Samir Pandey at samirpandey.in." />
+  <meta name="keywords"
+    content="Samir Pandey, samirpandey.in, Full Stack Developer, React Developer, Next.js Developer, Web Developer, Software Engineer, Portfolio" />
+  <meta name="author" content="Samir Pandey" />
+  <link rel="canonical" href="https://samirpandey.in/" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://samirpandey.in/" />
+  <meta property="og:title" content="Samir Pandey | Full Stack Web Developer" />
+  <meta property="og:description"
+    content="Portfolio of Samir Pandey at samirpandey.in - Full Stack Developer specializing in React, Next.js, and scalable web apps." />
+  <meta property="og:image" content="https://samirpandey.in/samirpic.webp" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://samirpandey.in/" />
+  <meta property="twitter:title" content="Samir Pandey | Full Stack Web Developer" />
+  <meta property="twitter:description"
+    content="Portfolio of Samir Pandey at samirpandey.in - Full Stack Developer specializing in React, Next.js, and scalable web apps." />
+  <meta property="twitter:image" content="https://samirpandey.in/samirpic.webp" />
+
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Samir Pandey",
+        "url": "https://samirpandey.in/",
+        "image": "https://samirpandey.in/samirpic.webp",
+        "jobTitle": "Full Stack Developer",
+        "sameAs": [
+          "https://github.com/samirpandey-07",
+          "https://www.linkedin.com/in/samirpandey07/"
+        ]
+      }
+    </script>
+</head>
+
+<body>
+  <!-- Example rounded avatar image -->
+
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
